Factored out layout styles into seperate sass files, changed fontawesome icon implementation, minor styling changes otherwise.

--- a/src/sass/base/_normalize.scss
+++ b/src/sass/base/_normalize.scss
@@ -5,3 +5,41 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* ---------------------------------------------------------------------------------------------------- */
+/* Resets ///////////////////////////////////////////////////////////////////////////////////////////// */
+/* ---------------------------------------------------------------------------------------------------- */
+a {
+    text-decoration: none;
+}
+
+i {
+    text-decoration: none;
+    font-style: normal;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-family: 'Raleway', Arial, Helvetica, sans-serif;
+    margin: 0;
+}
+
+h1 {
+    font-size: clamp(4rem, 12vw + 1rem , 7rem);
+}
+
+h2 {
+    font-size: clamp(2.5rem, 6vw + 1rem, 4.5rem);
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+button {
+    font-size: inherit;
+    font-family: inherit;
+    cursor: pointer;
+}
+
+/* ---------------------------------------------------------------------------------------------------- */
+/* ---------------------------------------------------------------------------------------------------- */
