--- a/src/sass/layouts/_landing.scss
+++ b/src/sass/layouts/_landing.scss
@@ -1,6 +1,4 @@
 // Styles for Landing Page Layout
-@use '../abstracts';
-
 .landing {
     position: relative;
     font-size: 3rem;
@@ -14,16 +12,16 @@
     right: 1rem;
     
     i {
-        color: abstracts.$dark-accent-color;
-        background-color: abstracts.$background-color;
-        border: 1px solid abstracts.$dark-accent-color;
+        color: var(--accent-color);
+        background-color: var(--background-color);
+        border: 1px solid var(--accent-color);
         padding: 0.5em 0.5em;
         border-radius: 9999px;
     }
 
     i:hover {
-        color: abstracts.$background-color;
-        box-shadow: inset 0 0 999px 999px abstracts.$dark-accent-color;
+        color: var(--background-color);
+        box-shadow: inset 0 0 999px 999px var(--accent-color);
     }
 }
 
@@ -48,8 +46,8 @@
 
 .landing-link {
     margin-top: 1rem;
-    color: abstracts.$background-color;
-    background-color: abstracts.$dark-accent-color;
+    color: var(--background-color);
+    background-color: var(--accent-color);
     padding: 0.3em 0.5em;
     border-radius: 1rem;
 }
